# orderflow

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  setup.cfg
.cursor/commands/: architecture-review.md  documentation-refresh.md  incident-drill.md  pre-pr-quality-check.md  reliability-review.md  security-review.md
.cursor/rules/: documentation.mdc  planning.mdc  reliability.mdc  security.mdc  testing.mdc
.github/workflows/: ci.yml  drift.yml  supply-chain.yml  terraform.yml
apps/incident-assistant/: Dockerfile
apps/incident-assistant/incident_assistant/: engine.py  (+4 more)
apps/order-api/: Dockerfile
apps/order-worker/: Dockerfile
apps/payment-mock/: Dockerfile
deploy/argocd/: application-prod-like.yaml  application-staging.yaml  project.yaml
deploy/compose/: docker-compose.yml
docs/: ai-safety-and-verification.md  architecture.md  azure-deployment-plan.md  capacity-plan.md  cost-model.md  interview-walkthrough.md  oidc-azure.md  operational-readiness-review.md  roadmap.md  service-ownership.md  slo-and-error-budget.md  terraform-destroy.md  terraform-state-recovery.md  threat-model.md
docs/adr/: ADR-001-redis-streams.md  ADR-002-kind-kustomize-argocd.md  ADR-003-local-first-azure.md  ADR-004-fault-injection.md  ADR-005-idempotency.md  ADR-006-ai-assistant-boundaries.md  ADR-007-image-provenance.md
docs/incidents/: INC-2026-07-lab-payment-surge.md  README.md
docs/planning/: repair-loop-2026-07-22.md
docs/runbooks/: README.md  canary-simulation.md  gitops-drift.md  high-order-latency.md  payment-dependency.md  queue-backlog.md  rollback.md
docs/screenshots/: README.md
infra/terraform/: .tflint.hcl  main.tf  versions.tf
observability/alertmanager/: config.yml
observability/alerts/: rules.yml
observability/dashboards/: orderflow-red-queue.json
observability/otel-collector/: config.yaml  grafana-dashboards.yml  grafana-datasources.yml  prometheus.yml  tempo.yaml
scripts/: new-service.sh
scripts/demo/: capture_grafana.py  demo-rollout-rollback.ps1  demo-rollout-rollback.sh  e2e_order.py  kind-down.sh  kind-up.ps1  kind-up.sh
scripts/drills/: README.md  db_exhaustion.py  payment_failure.py  payment_latency.py  queue_backlog.py  stale_menu.py
scripts/teardown/: local.ps1  local.sh
tests/eval/: test_assistant_eval.py
tests/integration/: test_assistant_http.py  test_order_flow.py
tests/load/: lunch_rush.js  stadium_surge.js  weekday.js
tests/unit/: test_common.py  test_payment_mock.py  test_trace_propagation.py
(+50 files in other folders)
