[metadata]
name = orderflow
version = 0.1.0

[options]
package_dir =
    orderflow_common = packages/orderflow_common/orderflow_common
packages = orderflow_common
python_requires = >=3.9
install_requires =
    fastapi>=0.115.0
    uvicorn[standard]>=0.32.0
    pydantic>=2.9.0
    pydantic-settings>=2.6.0
    httpx>=0.27.0
    redis>=5.2.0
    psycopg[binary,pool]>=3.2.0
    structlog>=24.4.0
    opentelemetry-api>=1.28.0
    opentelemetry-sdk>=1.28.0
    opentelemetry-exporter-otlp-proto-http>=1.28.0
    opentelemetry-instrumentation-fastapi>=0.49b0
    opentelemetry-instrumentation-httpx>=0.49b0
    opentelemetry-instrumentation-logging>=0.49b0
    prometheus-client>=0.21.0
